# xarray-subset-grid

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DevelopmentNotes.txt  LICENSE  README.md  conda_requirements.txt  conda_requirements_dev.txt  pyproject.toml
.github/workflows/: test.yaml
docs/: conf.py  contributing.rst  design.rst  grids.rst  index.rst  installation.rst  notebooks.rst  requirements.txt
docs/examples/: README.md  fvcom.ipynb  fvcom_3d.ipynb  gfs_opendap.ipynb  nam_opendap.ipynb  regular_grid_2d.ipynb  roms-compare.ipynb  roms.ipynb  roms_3d.ipynb  rtofs.ipynb  selfe.ipynb  sscofs.ipynb  stofs_2d.ipynb  stofs_3d.ipynb  subset_file.py  subset_from_ncfile.ipynb
docs/examples/example_data/: tris_and_bounds.nc
docs/examples/example_data/SCHISM/: horizontalVelX_1.nc  horizontalVelY_1.nc  out2d_1.nc  salinity_1.nc  zCoordinates_1.nc
examples/: README.md  fvcom.ipynb  fvcom_3d.ipynb  gfs_opendap.ipynb  nam_opendap.ipynb  regular_grid_2d.ipynb  roms-compare.ipynb  roms.ipynb  roms_3d.ipynb  rtofs.ipynb  selfe.ipynb  sscofs.ipynb  stofs_2d.ipynb  stofs_3d.ipynb  subset_file.py  subset_from_ncfile.ipynb
profiling/: README.md  STOFS_Benchmarks.ipynb  STOFS_benchmarks.py  p_in_p_perf.py
tests/: conftest.py  test_utils.py  utilities.py
tests/test_grids/: test_sgrid.py  test_ugrid.py
tests/test_visualization/: test_mpl_plotting.py
tests/test_visualization/output/: README.txt
xarray_subset_grid/: __init__.py  accessor.py  grid.py  selector.py  utils.py
xarray_subset_grid/grids/: __init__.py  fvcom.py  fvcom_grid.py  regular_grid.py  regular_grid_2d.py  roms.py  selfe_grid.py  sgrid.py  ugrid.py
xarray_subset_grid/visualization/: mpl_plotting.py
