[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray_subset_grid"
authors = [{ name = "Matthew Iannucci", email = "matt.iannucci@tetratech.com" }]
description = "Subset Xarray datasets in space"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["xarray"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version"]

dependencies = ["numpy", "xarray", "cf_xarray", "dask[complete]"]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pre-commit",
  "pyright",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-rtd-theme"
]
examples = [
  "fsspec",
  "s3fs",
  "zarr",
  "matplotlib",
  "netcdf4",
  "h5netcdf"
]

[project.urls]
"Homepage" = "https://github.com/asascience-open/xarray-subset-grid"

[tool.setuptools]
packages = ["xarray_subset_grid"]

[tool.setuptools_scm]
write_to = "xarray_subset_grid/_version.py"

[tool.ruff]
builtins = ["ellipsis"]
extend-exclude = [
    "xarray_subset_grid/_version.py"
]
target-version = "py39"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I", # isort
  "UP", # Pyupgrade
]
extend-safe-fixes = [
  "TID252", # absolute imports
]

[tool.pyright]
venvPath = "."
venv = "venv"
