[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray_subset_grid"
authors = [{ name = "Matthew Iannucci", email = "matt.iannucci@tetratech.com" },
           { name = "Christopher H. Barker", email = "chris.barker@noaa.gov" }]
description = "Subset Xarray datasets in space"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["xarray"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version"]

dependencies = [
  "numpy", 
  "xarray>=2023.10.0", 
  "cf_xarray", 
  "dask[complete]",
  "netcdf4",
  ]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pyright",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-rtd-theme",
]
examples = [
  "fsspec",
  "s3fs",
  "zarr",
  "matplotlib",
  "h5netcdf"
]

[project.urls]
"Homepage" = "https://github.com/asascience-open/xarray-subset-grid"

[tool.setuptools]
packages = ["xarray_subset_grid"]

[tool.setuptools_scm]
write_to = "xarray_subset_grid/_version.py"

[tool.ruff]
builtins = ["ellipsis"]
extend-exclude = [
    "xarray_subset_grid/_version.py"
]
target-version = "py310"
# Use a longer line length.
line-length = 100

[tool.ruff.lint]
ignore = [
  "E402", # module level import not at top of file
  "E731", # do not assign a lambda expression, use a def
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I", # isort
  "UP", # Pyupgrade
]
extend-safe-fixes = [
  "TID252", # absolute imports
]

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
xarray_subset_grid = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
examples = { features = ["examples"], solve-group = "default" }
all = { features = ["dev", "examples"], solve-group = "default" }
test310 = ["dev", "py310"] # implicit: test310 = ["dev", "py310", "default"]
test311 = ["dev", "py311"]
test312 = ["dev", "py312"]


[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.10"
numpy = "*"
xarray = ">=2023.10.0"
pandas = ">=2.2.2"
cf_xarray = "*"
dask = "*"
fsspec = "*"
s3fs = "*"
zarr = "*"
netcdf4 = "*"
h5netcdf = "*"


[tool.pixi.feature.dev.dependencies]
ruff = "*"
pre-commit = "*"
pyright = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "*"
sphinx-rtd-theme = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/"

[tool.pixi.feature.examples.dependencies]
matplotlib = "*"
jupyter = "*"
ipython = "*"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
